Fix handshake exception by switching away from alpine